Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127728

XYSeries is not removed from graph after clear() is called

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.8.0 Beta3, 6.9.0 FF
    • 6.8
    • Graphs: 2D
    • None
    • 6e19d68e3 (dev), 9f519172b (6.8)

      XYSeries remains in draws after clear() is called.

       

      Reproduce:

      Open QmlUsageSeries.qml and add a button that calls clear(). it doesnt clear the series.

        For Gerrit Dashboard: QTBUG-127728
        # Subject Branch Project Status CR V

            owaisakhtar Owais Akhtar
            owaisakhtar Owais Akhtar
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes