Fix XYSeries PainterPath and markers not removed when clear() is called

Fixes: QTBUG-127728
Pick-to: 6.8
Change-Id: Id1d759b425ad1f1fc8e84e1b8bf32b6497400843
Reviewed-by: Jere Tuliniemi <jere.tuliniemi@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>